--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/cw1753/Food-Truck-Challenge/issues"
   },
-  "homepage": "https://github.com/cw1753/Food-Truck-Challenge#readme"
+  "homepage": "https://github.com/cw1753/Food-Truck-Challenge#readme",
+  "dependencies": {
+    "compression": "^1.7.4",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3"
+  }
 }
